# zymera

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  RESPONSIBLE_AI.md  pyproject.toml  requirements.txt
configs/: default.json  prompts.json  registry.json
configs/presets/: sd15.json
scripts/: smoke_test.py
src/: main.py
src/zymera/: __init__.py  __main__.py  capabilities.py  cli.py  config.py  doctor.py  identity.py  pipeline.py  prompts.py  recipes.py
src/zymera/agent/: __init__.py  executor_agent.py  planner_agent.py  run.py  tools.py
src/zymera/planner/: __init__.py  heuristic.py  types.py
src/zymera/registry/: __init__.py  catalog.py  manager.py  policy.py
src/zymera/stages/: __init__.py  base.py  compose.py  identity_image.py  text2image.py  tts.py  video.py
tests/: test_agent_tools.py  test_capabilities.py  test_cli.py  test_config.py  test_identity.py  test_pipeline.py  test_planner.py  test_policy.py  test_prompts.py  test_registry.py  test_stages_base.py
